--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <body>
 	<div id="container">
 		<p id="simple-paragraph">
-            A hover state is a CSS psuedo-class, the :hover selector is used to select elements when you mouse over them. Most often we think of hover effects applying to <a href="http://google.com" target="_blank">links</a>, however, <span id="any">any</span> HTML element <img id="pizza" src="img/pizza.jpg" /> can have a hover state. You can even effect your <span class="mouse">mouse cursor</span> while hovering.
+      A hover state is a CSS psuedo-class, the :hover selector is used to select elements when you mouse over them. Most often we think of hover effects applying to <a href="http://www.officialmikepence.com/" target="_blank">links</a>, however, <span id="any">any</span> HTML element <img id="rocket" src="img/rocket.png" /> can have a hover state. You can even effect your <span class="mouse">mouse cursor</span> while hovering.
 		</p>
 		<p id="following-paragraph">
-			Using hover states and advan<span class="c">c</span>ed <span class="c">C</span>SS sele<span class="c">c</span>tors you <span class="c">c</span>an a<span class="c">c</span>heive a myriad of interesting interactive effe<span class="c">c</span>ts without mu<span class="c">c</span>h <span class="c">c</span>omplex <span class="c">c</span>oding. It's es<span class="c">c</span>pecially interesting to think of it's effe<span class="c">c</span>ts on text. For instance in this paragraph hovering on the letter "<span class="c">c</span>" <span class="c">c</span>hanges the appearan<span class="c">c</span>e of all "<span class="c">c</span>"s whi<span class="c">c</span>h <span class="c">c</span>ome after it.
+		  Using h<span class="o">o</span>ver states and advancedCSS select<span class="o">o</span>rs y<span class="o">o</span>u can acheive a myriad <span class="o">o</span>f interesting interactive effects with<span class="o">o</span>ut much c<span class="o">o</span>mplex c<span class="o">o</span>ding. It's escpecially interesting t<span class="o">o</span> think <span class="o">o</span>f it's effects <span class="o">o</span>n text. F<span class="o">o</span>r instance in this paragraph h<span class="o">o</span>vering <span class="o">o</span>n the letter "c" changes the appearance <span class="o">o</span>f all "o"s which c<span class="o">o</span>me after it.
 		</p>
-		<p id="image-paragraph">	
+		<p id="image-paragraph">
 			<span class="top">You can also interact with images. For instance, this paragraph has several images hidden behind it. You can set a hover state to find all children of an element with a certain tag, class, or other html attribute. By adjusting the transition-delay of elements, you can have them appear at different rates.</span>
 			<img src="img/1.jpg" id="image-1" />
 			<img src="img/2.jpg" id="image-2" />
@@ -34,7 +34,7 @@
 		<div id="square2"></div>
 
 		<p id="tip-paragraph">
-			Hover states can also use CSS to make notes about your text appear on hover. This can take the form of a <span class="tooltip">tooltip<span class="tooltip-text">This is a tooltip</span></span>, you would nest the elements within each other and use child selectors to change their appearance.	 
+			Hover states can also use CSS to make notes about your text appear on hover. This can take the form of a <span class="tooltip">tooltip<span class="tooltip-text">This is a tooltip</span></span>, you would nest the elements within each other and use child selectors to change their appearance.
 		</p>
 		<p id="three-dimensional">
 			<span class="top">Advanced CSS animations, filters, and transitions can acheive dimension, blur, and other motion effects.</span>
@@ -43,7 +43,7 @@
         <p>
 			THE END.
 		</p>
-	
+
 	</div>
 
 
